litrpc+server: show cfg in ListAutopilotFeatures
We pass on default configuration to litrpc in order to display them in
the list features call.
