# session_rpcserver.go
@@ -815,6 +815,7 @@ func (s *sessionRpcServer) ListAutopilotFeatures(ctx context.Context,
 			Rules:           rules,
 			PermissionsList: marshalPerms(f.Permissions),
 			RequiresUpgrade: upgrade,
+			DefaultConfig:   string(f.DefaultConfig),
 		}
 	}
 
